more spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,9 @@
     border-top: 5px solid #9bddff;
     width: 80px;
     padding-bottom: 20px;
+    text-align: center;
+    float: center;
+    margin: auto;
  }
 
  .colour-splash {
